# text-sentiment-analyzer

./: LICENSE  README.md  main.py  pyproject.toml
analysis/: __init__.py  sentiment_counter.py  text_processor.py
data/: dictionary.xlsx  result.csv
data/docs/: 2005_РКК Энергия_Севастьянов Н.Н..docx  2008_Сургутнефтегаз_Богданов В.Л..docx  2010_Саратовский НПЗ_Захаров В.А..docx  2013_ПАО ЮТЭЙР_Мартиросов А.З..docx  2015_Транснефть_Токарев Н.П..docx  2018_Газпромнефть_Дюков А.В..docx  2019_Русгидро_Шульгинов Н.Г..docx  2019_Сбер_ Греф Г.О..docx  2019_Татнефть_Маганов Н.У..docx  2019_ЮНИПРО_Широков М.Г..docx  2020_Газпромнефть_Дюков А.В..docx  2020_Инарктика_Соснов И..docx  2020_ПАО Банк Уралсиб_Бобров К.А..docx  2020_ПАО КАМАЗ_Кологин С.А..docx  2020_ПАО Русполимет_Ключай М.В..docx  2020_Русал_Никитин Е.В..docx  2020_Татнефть_Маганов Н.У..docx  2020_Транснефть_Токарев Н.П..docx  2020_Якутская ТЭК_Коробов А.В..docx  2021_GlobalTruck_Саттаров И.К..docx  2021_X5 Retail Group_Шехтерман И.В..docx  2021_Группа Черкизово_Михайлов С.И..docx  2021_ПАО Абрау-Дюрсо_Масловский В.В..docx  2021_ПАО Мегафон_Помбухчан Х.Э..docx  2021_Росбанк_Поляков И.А..docx  2021_ТМК_Корытько И.В..docx  2021_ТМК_Чирков С.В..docx  2022_АФК Система_Ситдеков.docx  2022_Русал_Никитин Е.В..docx  2023_ВТБ_Костин А.Л..docx  2023_Инарктика_Соснов И..docx  2023_Росбанк_Воеводина Н.В..docx  2023_Русгидро_Хмарин В..docx  2023_Северсталь_Шевелев А.А..docx  2023_Селигдар_Татаринов С.М..docx  (+11 more)
docs_processing/: __init__.py  doc_reader.py
reporting/: __init__.py  csv_reporter.py
utils/: config.py  paths.py
(+4 files in other folders)
